data/derived/sp14/progs/unify/prog4713.ml.out
Characters 18-19:
  let _ = wwhile (f,b);;
                    ^
Error: This expression has type bool but an expression was expected of type
         int
